# Sympatch

./: README.md  pyproject.toml  sympatch-0.9.0-py3-none-any.whl
sympatch/: __init__.py  bundle.py  cli.py  context.py  diffutil.py  impact.py  indexer.py  intents.py  models.py  patcher.py  reconcile.py  sessions.py  storage.py  utils.py  validator.py
sympatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic.py  test_sympatch_09.py
