[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sympatch"
version = "0.1.0"
description = "Symbol-aware patching tools for Python projects."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "sympatch contributors" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
sympatch = "sympatch.cli:main"

[tool.setuptools.packages.find]
include = ["sympatch*"]
